--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,16 +20,36 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci
-      
+      run: |
+        npm ci
+        npm list --depth=0
+        
+    - name: Check for test files
+      run: |
+        echo "Checking for test files..."
+        find src -name "*.test.js" -o -name "*.spec.js"
+        
     - name: Run tests
-      run: npm test
-      
+      run: |
+        echo "Running tests..."
+        CI=true npm test -- --verbose
+        
     - name: Build project
-      run: npm run build
-      
+      run: |
+        echo "Building project..."
+        CI=true npm run build
+        
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: build
-        path: build/ 
+        path: build/
+        
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: |
+          coverage/
+          test-results/ 
